# scheduler-mgr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  fix_test_writer2.py  fix_typeerror.patch  fix_typeerror.py  fix_typeerror2.py  justfile  pyproject.toml  update_script.py
modules/hub/: .env.example  README.md  alembic.ini  pyproject.toml
modules/hub/app/: auth.py  main.py  router.py
modules/hub/app/common/: config.py  database.py
modules/hub/app/common/utils/: calc_schedule.py
modules/hub/app/features/dispatchers/: services.py  services.py.orig
modules/hub/app/features/schedule_configs/: models.py  repos.py  schemas.py  services.py
modules/hub/app/features/schedule_jobs/: models.py  repos.py  schemas.py  services.py
modules/hub/app/features/schedule_logs/: models.py  repos.py  schemas.py  services.py
modules/hub/app/features/system_configs/: models.py  repos.py  schemas.py  services.py
modules/hub/app/features/tasks/: __init__.py  examples.py
modules/hub/migrations/: env.py
modules/hub/migrations/versions/: 20260512_142327_b3a53d29fb73_init.py  20260513_130741_34961a175808_init.py  20260516_120248_3ed9535ae4d9_add_index.py
modules/hub/scripts/: gen_env_example.py
modules/hub/tests/: GUIDE.md  conftest.py  pytest.ini
modules/hub/tests/e2e/: conftest.py
modules/hub/tests/e2e/test_dispatchers/: test_dispatchers_api.py
modules/hub/tests/fixtures/: __init__.py  clients.py  data_factory.py  db.py
modules/hub/tests/integrate/: conftest.py
modules/hub/tests/utils/: __init__.py  assertions.py  fastapi.py  helpers.py
(+54 files in other folders)
